# advanta

./: .env.example  .gitignore  CLAUDE.md  README.md  documentation.html  package.json  testing.html
apps/api/: README.md  main.py  pyproject.toml
apps/api/alembic/versions/: 20260626_0900_suggested_copies.py  20260628_0200_traffic_genie.py  20260628_0300_solo_ads.py
apps/api/app/agents/: catalog.py  growth_content.py  solo_ads.py  traffic_assets.py  traffic_recommendation.py
apps/api/app/billing/: plans.py
apps/api/app/core/: config.py
apps/api/app/integrations/: paddle_billing.py
apps/api/app/llm/: client.py
apps/api/app/models/: __init__.py  billing_customer.py  billing_subscription.py  fee_invoice.py  solo_ad.py  suggested_copy.py  traffic_campaign.py  utm_link.py
apps/api/app/payments/: base.py  manual.py  registry.py
apps/api/app/schemas/: billing.py  solo_ads.py  suggested_copy.py  traffic.py
apps/api/app/services/: appsumo_service.py  billing_service.py  email_service.py  fee_billing_service.py  invitation_service.py  password_reset_service.py  report_renderer.py  solo_ad_service.py  suggested_copy_service.py  traffic_analytics_service.py  traffic_service.py  two_factor_service.py  utm_service.py
apps/api/app/traffic/: __init__.py  catalog.py
apps/api/static/: advanta-ab.js
apps/api/tests/: test_agents.py  test_billing.py  test_billing_portal.py  test_fee_billing.py  test_health.py  test_plan_limits_extended.py  test_suggested_copies.py  test_superuser_bootstrap.py  test_website_skills.py  test_workspaces.py
docs/: appsumo.md  security.md  (+8 more)
(+92 files in other folders)
