[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanta-api"
version = "0.0.1"
description = "AdVanta backend — FastAPI + SQLAlchemy + Celery"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AdVanta" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  "redis>=5.2",
  "httpx>=0.28",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.2",
  "cryptography>=44.0",
  "celery>=5.4",
  "structlog>=24.4",
  "python-multipart>=0.0.18",
  "email-validator>=2.2",
  "python-slugify>=8.0",
  "beautifulsoup4>=4.12",
  "reportlab>=4.2",
  "python-docx>=1.1",
  "sentry-sdk[fastapi]>=2.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "httpx>=0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
